# rsgbgfx

./: Cargo.toml  rsgbgfx.1
src/: args.rs  img.rs  logic.rs  main.rs  tile.rs  util.rs
src/args/: palette.rs  slices.rs
src/args/palette/: parse.rs  read.rs
src/img/: mod.rs  png.rs
src/logic/: mod.rs  palettes.rs  tiles.rs
src/logic/tiles/: tests.rs
src/tile/: block.rs  mod.rs  palette.rs
src/util/: byte_parse.rs  mod.rs  read_chars.rs
