[package]
name = "rsgbgfx"
description = "Converts images to Game Boy graphics formats"
version = "0.1.0"
authors = ["Eldred Habert <me@eldred.fr>"]
edition = "2018"

[dependencies]
arrayvec = "0.5.2"
funty = "1"
nom = "6"

[dependencies.clap]
version = "3.0.0-beta.2"
features = [ "wrap_help" ]

[dependencies.png]
version = "0.16.8"
default-features = false # We do not want to encode PNGs
